# horizon_v0.2

./: .gitignore  CLAUDE.md  SPEC.md
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  worker.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  chat_agent.py
backend/app/agents/research/: __init__.py  graph.py  nodes.py  state.py  tools.py
backend/app/api/: __init__.py  auth.py  chat.py  email.py  health.py  profile.py  research.py  router.py  search.py
backend/app/core/: config.py  database.py  embeddings.py  exceptions.py  logging.py  security.py
backend/app/models/: schemas.py
backend/app/services/: deduplication.py  profile.py  search.py  validation.py
backend/data/: __init__.py  opportunities.json  seed_opportunity.py
backend/migrations/: env.py
backend/migrations/versions/: 20260405_0001_initial_schema.py  20260405_0002_opportunity_embedding_1536.py
backend/tests/: conftest.py  test_auth.py
backend/tests/unit/: test_main.py
backend/tests/unit/api/: test_health.py  test_profile_api.py
backend/tests/unit/core/: test_config.py  test_database.py  test_exceptions.py  test_logging.py  test_security.py
backend/tests/unit/data/: test_seed_opportunity.py
backend/tests/unit/models/: test_schemas.py
backend/tests/unit/services/: test_profile.py
