[project]
name = "backend"
version = "0.1.0"
description = "Backend service for Horizon v0.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "clerk-backend-api>=3.0.0",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "svix>=1.63.0",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
